Creation of the changelog and actionlog collections does not use 'majority' write concern

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 3.3.10
    • Affects Version/s: None
    • Component/s: Sharding
    • Fully Compatible
    • ALL
    • v3.2
    • Sharding 17 (07/15/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The catalog manager code, which creates the changelog and actionlog collections sends the default write concern, when it should be specifying 'majority'.

      This should be fixed so we can tighten the assertions around write concern in config servers as described in SERVER-24858.

            Assignee:
            Kaloian Manassiev
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: