SERVER-24859 Use 'majority' write concern to create changelog and actionlog collections