src/mongo/s/catalog/replset/sharding_catalog_client_impl.cpp
@@ -1492,7 +1492,9 @@ Status ShardingCatalogClientImpl::_checkDbDoesNotExist(OperationContext* txn,
 Status ShardingCatalogClientImpl::_createCappedConfigCollection(OperationContext* txn,
                                                                 StringData collName,
                                                                 int cappedSize) {
-    BSONObj createCmd = BSON("create" << collName << "capped" << true << "size" << cappedSize);
+    BSONObj createCmd =
+        BSON("create" << collName << "capped" << true << "size" << cappedSize << "writeConcern"
+                      << ShardingCatalogClient::kMajorityWriteConcern.toBSON());
 
     auto result = Grid::get(txn)->shardRegistry()->getConfigShard()->runCommand(
         txn,
